--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -13,6 +13,9 @@
   <div id="main">
     <div id="header">
       <div id="logo">
+          {% if current_user.is_authenticated %}
+            <h4>??????, {{ current_user.username }}!</h4>
+          {% endif %}
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <h1><a href="home.html">Mesrop's<span class="logo_colour">_blog</span></a></h1>
@@ -22,11 +25,20 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="home.html">Home</a></li>
-          <li><a href="posts.html">Posts</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact Me</a></li>
+          <li class="selected"><a href="home">Home</a></li>
+          <li><a href="posts">Posts</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="contact">Contact Me</a></li>
         </ul>
+      </div>
+      <div class="navbar-nav">
+        {% if current_user.is_authenticated %}
+            <a class="nav-item nav-link navigation-links" href="{{url_for('users.account') }}"><i class="fa fa-user"></i>Profile</a>
+            <a class="nav-item nav-link navigation-links" href="{{ url_for('users.logout') }}"><i class="fa fa-sign-out"></i>Logout</a>
+        {% else %}
+            <a class="nav-link nav-item navigation-links" href="{{url_for('users.login') }}">Login</a>
+            <a class="nav-link nav-item navigation-links" href="{{url_for('users.register') }}">Registration</a>
+        {% endif %}
       </div>
     </div>
     <div id="site_content">
